Bug fixes and Designed Food Order System(receiving order and information, saving order history)